--- a/index.html
+++ b/index.html
@@ -1,9 +1,146 @@
-<html>
-<body>
-
-<h1>我的第一个标题</h1>
-
-<p>我的第一个段落。</p>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>jQuery练习</title>
+    <style>
+		body{
+			margin:0px;
+		}
+    	.header{
+    		width:100%;
+    		height:75px;
+    		background:url(http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/Jv3K6jD.jpg) repeat-x;
+    	}
+    	.nav{
+    		width:75%;
+			height:75px;
+			margin:0 auto;
+    	}
+    	ul{
+    		list-style:none;
+    		float:right;
+    		margin:0;
+    		padding:0;
+    		padding-top:20px;
+    	}
+    	ul li{
+    		float:left;
+    		margin-left:20px;
+    		color:white;
+    		font-family: "微软雅黑";
+    	}
+    	.main{
+    		width:75%;
+    		height:1700px;
+    		margin:0 auto;
+    		margin-top:35px;
+    		border:1px solid #ddd;
+    		border-radius:4px;
+    	}
+    	h1{
+    		margin:0;
+    	}
+    	.mainTop{
+    		height:50px;
+    		background-color:#f1f1f1;
+    		padding-left:20px;
+    		padding-top:14px;
+    		font-family:"微软雅黑";
+    		/*padding: 14px 0 0 20px*/
+    	}
+    	.mainBody{
+    		height:1547px;
+    		background-color:white;
+    		padding:40px 45px;
+			font-size:14px;
+    	}
+    	.mainBody p {
+    		margin:.33em 0;
+    		font-family:"微软雅黑";
+    	}
+    	.nav a img{
+			width:130px;
+			height:44px;
+			margin-top:14px;
+		}
+		.mainBody p img{
+			width:320px;
+		}
+		.mainBody p a{
+			text-decoration: none;
+			color:aqua;
+		}
+		.mainBody h4 a{
+			text-decoration: none;
+			color:aqua;
+		}
+		.footer{
+			width:75%;
+			height:70px;
+			margin:0 auto;
+			color:#888;
+			margin-top:20px;
+		}
+    </style>
+</head> 
+<body style="background-color:#dcdedb;">
+    <!--页头  100%*75px-->
+    <div class="header">
+    	<div class="nav">
+			<a href="/">
+    			<img src="http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/dNEBuK6.png"/>
+    		</a>
+    		<ul>
+    			<li>首页</li>
+    			<li>帮助与反馈</li>
+    			<li>公众平台</li>
+    			<li>开放平台</li>
+    			<li>微信支付</li>
+    			<li>微信广告</li>
+    			<li>企业微信</li>
+    			<li>表情开放平台</li>
+    			<li>微信网页版</li>
+    		</ul>
+    	</div>
+    </div>
+    <!--页中-->
+   	<div class="main">
+   		<div class="mainTop">
+   			<h1>微信 7.0.12 for IOS 全新发布</h1>
+   		</div>
+   		<div class="mainBody">
+   			<p>发布日期： 2020-03-22</p>
+   			<p>发布版本： 微信 7.0.12 for iOS</p>
+   			<p>微信，超过10亿人使用，能够通过网络给好友发送文字消息、表情和图片，还可以传送文件，与朋友视频聊天，让你的沟通更方便。并提供有多种语言界面。</p>
+			<p>该版本主要更新如下：</p>
+			<h4>iOS 13 及以上版本，可跟随系统的设置，切换为深色模式。</h4>
+			<p>
+				<img src="http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/2Vq5nB9.png" alt="">
+				<img src="http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/3jEJeB6.png" alt="">
+			</p>  
+			<h4>优化了语音消息的发送体验，上滑转文字更方便了。</h4>
+			<p>
+				<img src="http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/KnU7krF.png" alt="">
+				<img src="http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/1TYpn-l.png" alt="">
+			</p>
+			<h4>为方便你更好地了解微信如何使用你的个人信息，便于你对其加以管理，我们更新了<a href="/">《微信隐私保护指引》</a>，详情可见“关于微信”。</h4>
+			<p>如果您想了解更多详情,或给我们反馈,可以通过以下方式联系我们：</p>
+			<p>官方网站：<a href="https://weixin.qq.com">https://weixin.qq.com</a></p>
+			<p>腾讯微博：@weixin</p>
+			<p>新浪微博：@腾讯微信团队</p>
+			<p>微信号 ：weixin</p>
+   		</div>
+   	</div>
+   	<!--页尾--> 
+   	<div class="footer">
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore repellendus nesciunt amet. Modi dolore voluptas nobis beatae eaque nemo, sed perspiciatis consequuntur accusamus. Beatae tempore, incidunt nam assumenda natus repellat!
+		</p>
+	</div>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
+    <script>
+    
+    </script>
 </body>
 </html>
