--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<p>腾讯微博：@weixin</p>
 			<p>新浪微博：@腾讯微信团队</p>
 			<p>微信号 ：weixin</p>
-			<a href="#https://github.com/tanshuidexiaolu/L2">我的Python项目</a>
+			<a href="/img/LWQ（2）">我的Python项目</a>
    		</div>
    	</div>
    	<!--页尾--> 
