--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<p>腾讯微博：@weixin</p>
 			<p>新浪微博：@腾讯微信团队</p>
 			<p>微信号 ：weixin</p>
-			<a href="img/LWQ（2）">我的Python老师</a>
+			<a href="img/LWQ">我的Python老师</a>
    		</div>
    	</div>
    	<!--页尾--> 
