--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 			<p>新浪微博：@腾讯微信团队</p>
 			<p>微信号 ：weixin</p>
 			<a href="./img/LWQ.png">我的Python老师</a>
+			<a href="./img/">测试</a>
    		</div>
    	</div>
    	<!--页尾--> 
