--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,7 @@
 <h1>测试标题</h1>
 <p>测试段落</p>
 <a href="https://github.com/tanshuidexiaolu/tanshuidexiaolu.github.io">github网站源码</a>
+<a href="tanshuidexiaolu.github.io/img/KY.png">某人</a>
 <img src="./img/TSDXL.png" width="80" height="84" />
   <li>测试</li>
 </body>
