--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>随便整的网站</title>
+    <title>贪睡的小芦个人网站</title>
     <style>
 		body{
 			margin:0px;
@@ -89,54 +89,25 @@
     <div class="header">
     	<div class="nav">
 			<a href="/">
-    			<img src="http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/dNEBuK6.png"/>
+    			<img src="./img/TSDXL.png"/>
     		</a>
     		<ul>
-    			<li>首页</li>
-    			<li>帮助与反馈</li>
-    			<li>公众平台</li>
-    			<li>开放平台</li>
-    			<li>微信支付</li>
-    			<li>微信广告</li>
-    			<li>企业微信</li>
-    			<li>表情开放平台</li>
-    			<li>微信网页版</li>
+    			<li>我</li>
+    			<li>b站</li>
+    			<li>github</li>			
     		</ul>
     	</div>
     </div>
     <!--页中-->
    	<div class="main">
    		<div class="mainTop">
-   			<h1>微信 7.0.12 for IOS 全新发布</h1>
-   		</div>
-   		<div class="mainBody">
-   			<p>发布日期： 2020-03-22</p>
-   			<p>发布版本： 微信 7.0.12 for iOS</p>
-   			<p>微信，超过10亿人使用，能够通过网络给好友发送文字消息、表情和图片，还可以传送文件，与朋友视频聊天，让你的沟通更方便。并提供有多种语言界面。</p>
-			<p>该版本主要更新如下：</p>
-			<h4>iOS 13 及以上版本，可跟随系统的设置，切换为深色模式。</h4>
-			<p>
-				<img src="http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/2Vq5nB9.png" alt="">
-				<img src="http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/3jEJeB6.png" alt="">
-			</p>  
-			<h4>优化了语音消息的发送体验，上滑转文字更方便了。</h4>
-			<p>
-				<img src="http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/KnU7krF.png" alt="">
-				<img src="http://res.wx.qq.com/a/wx_fed/weixin_portal/res/static/img/1TYpn-l.png" alt="">
-			</p>
-			<h4>为方便你更好地了解微信如何使用你的个人信息，便于你对其加以管理，我们更新了<a href="/">《微信隐私保护指引》</a>，详情可见“关于微信”。</h4>
-			<p>如果您想了解更多详情,或给我们反馈,可以通过以下方式联系我们：</p>
-			<p>官方网站：<a href="https://weixin.qq.com">https://weixin.qq.com</a></p>
-			<p>腾讯微博：@weixin</p>
-			<p>新浪微博：@腾讯微信团队</p>
-			<p>微信号 ：weixin</p>
-			<a href="./index2.html">index2测试</a>
+   			<h1>贪睡的小芦个人网站</h1>
    		</div>
    	</div>
    	<!--页尾--> 
    	<div class="footer">
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore repellendus nesciunt amet. Modi dolore voluptas nobis beatae eaque nemo, sed perspiciatis consequuntur accusamus. Beatae tempore, incidunt nam assumenda natus repellat!
+			b站up主，程序员，中学生
 		</p>
 	</div>
     <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
