--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     		font-family:"微软雅黑";
     	}
     	.nav a img{
-			width:40px;
-			height:42px;
+			width:42px;
+			height:44px;
 			margin-top:14px;
 		}
 		.mainBody p img{
@@ -93,7 +93,7 @@
     		</a>
     		<ul>
     			<li>我</li>
-    			<li>b站</li>
+    			<a href = "https://space.bilibili.com/337356560"><li>b站</li></a>
     			<li>github</li>			
     		</ul>
     	</div>
