--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     		<ul>
     			<li>我</li>
     			<a href = "https://space.bilibili.com/337356560"><li>b站</li></a>
-    			<li>github</li>			
+    			<a href = "https://www.github.com/tanshuidexiaolu"><li>github</li></a>			
     		</ul>
     	</div>
     </div>
