--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     			<img src="./img/TSDXL.png"/>
     		</a>
     		<ul>
-    			<li>我</li>
+    			<a href = "我.md"><li>我</li></a>
     			<a href = "https://space.bilibili.com/337356560"><li>b站</li></a>
     			<a href = "https://www.github.com/tanshuidexiaolu"><li>github</li></a>			
     		</ul>
